// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ticket actions addTag() 1`] = `
[
  {
    "args": Immutable.Map {
      "tag": Immutable.Map {
        "name": "refund",
      },
    },
    "type": "addTag",
  },
]
`;

exports[`ticket actions applyMacro() dispatches actions 1`] = `
[
  {
    "macro": Immutable.Map {
      "id": 1,
      "actions": Immutable.List [
        Immutable.Map {
          "type": "user",
          "name": "setResponseText",
          "arguments": Immutable.Map {
            "contentState": Immutable.Map {},
            "selectionState": Immutable.Map {},
          },
        },
        Immutable.Map {
          "type": "user",
          "name": "addTags",
          "arguments": Immutable.Map {
            "tags": "refund, billing",
          },
        },
        Immutable.Map {
          "arguments": Immutable.Map {
            "tags": "",
          },
        },
      ],
    },
    "ticketId": 1,
    "type": "APPLY_MACRO",
  },
  {
    "appliedMacro": null,
    "args": Immutable.Map {
      "contentState": Immutable.Map {},
      "selectionState": Immutable.Map {},
    },
    "currentUser": Immutable.Map {
      "id": 1,
    },
    "fromMacro": true,
    "ticket": Immutable.Map {
      "trashed_datetime": null,
      "channel": "email",
      "is_unread": false,
      "priority": "normal",
      "custom_fields": Immutable.Map {},
      "reply_options": Immutable.Map {
        "email": Immutable.Map {
          "answerable": true,
        },
        "internal-note": Immutable.Map {
          "answerable": true,
        },
      },
      "spam": false,
      "subject": "",
      "messages": Immutable.List [],
      "assignee_team": null,
      "via": "helpdesk",
      "state": Immutable.Map {
        "dirty": false,
        "latestEventDatetime": null,
        "appliedMacro": null,
        "hasAttemptedToCloseTicket": false,
      },
      "status": "open",
      "tags": Immutable.List [],
      "events": Immutable.List [],
      "assignee_user": null,
      "id": 1,
      "_internal": Immutable.Map {
        "shouldDisplayAuditLogEvents": false,
        "shouldDisplayAllFollowUps": false,
        "loading": Immutable.Map {
          "fetchTicket": false,
          "deleteMessage": false,
          "setSpam": false,
          "setTrash": false,
        },
        "pendingMessages": Immutable.List [],
        "isShopperTyping": false,
        "isShopperTypingTimeoutId": undefined,
        "isPartialUpdating": false,
      },
      "customer": null,
    },
    "ticketId": 1,
    "type": "setResponseText",
  },
  {
    "macro": Immutable.Map {
      "id": 1,
      "actions": Immutable.List [
        Immutable.Map {
          "type": "user",
          "name": "setResponseText",
          "arguments": Immutable.Map {
            "contentState": Immutable.Map {},
            "selectionState": Immutable.Map {},
          },
        },
        Immutable.Map {
          "type": "user",
          "name": "addTags",
          "arguments": Immutable.Map {
            "tags": "refund, billing",
          },
        },
        Immutable.Map {
          "arguments": Immutable.Map {
            "tags": "{{ticket.customer.integrations.magento2}}",
          },
        },
      ],
    },
    "type": "NEW_MESSAGE_RECORD_MACRO",
  },
]
`;

exports[`ticket actions applyMacroAction() 1`] = `
{
  "appliedMacro": null,
  "args": Immutable.Map {
    "contentState": Immutable.Map {},
    "selectionState": Immutable.Map {},
  },
  "currentUser": undefined,
  "fromMacro": true,
  "ticket": Immutable.Map {
    "trashed_datetime": null,
    "channel": "email",
    "is_unread": false,
    "priority": "normal",
    "custom_fields": Immutable.Map {},
    "reply_options": Immutable.Map {
      "email": Immutable.Map {
        "answerable": true,
      },
      "internal-note": Immutable.Map {
        "answerable": true,
      },
    },
    "spam": false,
    "subject": "",
    "messages": Immutable.List [],
    "assignee_team": null,
    "via": "helpdesk",
    "state": Immutable.Map {
      "dirty": false,
      "latestEventDatetime": null,
      "appliedMacro": null,
      "hasAttemptedToCloseTicket": false,
    },
    "status": "open",
    "tags": Immutable.List [],
    "events": Immutable.List [],
    "assignee_user": null,
    "id": 1,
    "_internal": Immutable.Map {
      "shouldDisplayAuditLogEvents": false,
      "shouldDisplayAllFollowUps": false,
      "loading": Immutable.Map {
        "fetchTicket": false,
        "deleteMessage": false,
        "setSpam": false,
        "setTrash": false,
      },
      "pendingMessages": Immutable.List [],
      "isShopperTyping": false,
      "isShopperTypingTimeoutId": undefined,
      "isPartialUpdating": false,
    },
    "customer": null,
  },
  "ticketId": 1,
  "type": "setResponseText",
}
`;

exports[`ticket actions clearAppliedMacro() 1`] = `
[
  {
    "ticketId": 1,
    "type": "CLEAR_APPLIED_MACRO",
  },
]
`;

exports[`ticket actions clearTicket() 1`] = `
[
  {
    "type": "CLEAR_TICKET",
  },
  {
    "receivers": {
      "to": [],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {},
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`ticket actions deleteActionOnApplied() 1`] = `
[
  {
    "actionIndex": 0,
    "ticketId": 1,
    "type": "DELETE_ACTION_ON_APPLIED",
  },
]
`;

exports[`ticket actions deleteMessage() 1`] = `
[
  {
    "messageId": 10,
    "type": "DELETE_TICKET_MESSAGE_SUCCESS",
  },
]
`;

exports[`ticket actions deleteTicket() 1`] = `[]`;

exports[`ticket actions deleteTicketPendingMessage() 1`] = `
[
  {
    "message": {
      "id": 1,
    },
    "type": "DELETE_TICKET_PENDING_MESSAGE",
  },
]
`;

exports[`ticket actions displayAuditLogEvents() should dispatch audit logs events, page per page 1`] = `
[
  {
    "type": "DISPLAY_TICKET_AUDIT_LOG_EVENTS",
  },
  {
    "payload": Immutable.List [
      Immutable.Map {
        "data": null,
        "uri": "/api/events/",
        "context": "foo",
        "user_id": 1,
        "created_datetime": "2019-11-15 19:00:00.000000",
        "object_type": "Ticket",
        "type": "ticket-reopened",
        "id": 1,
        "object_id": 1,
      },
      Immutable.Map {
        "data": null,
        "uri": "/api/events/",
        "context": "foo",
        "user_id": 1,
        "created_datetime": "2019-11-15 19:00:00.000000",
        "object_type": "Ticket",
        "type": "ticket-reopened",
        "id": 2,
        "object_id": 1,
      },
      Immutable.Map {
        "data": null,
        "uri": "/api/events/",
        "context": "bar",
        "user_id": 1,
        "created_datetime": "2019-11-15 19:00:00.000000",
        "object_type": "SatisfactionSurvey",
        "type": "satisfaction-survey-responded",
        "id": 5,
        "object_id": 1,
      },
      Immutable.Map {
        "data": null,
        "uri": "/api/events/",
        "context": "bar",
        "user_id": 1,
        "created_datetime": "2019-11-15 19:00:00.000000",
        "object_type": "SatisfactionSurvey",
        "type": "satisfaction-survey-responded",
        "id": 6,
        "object_id": 1,
      },
      Immutable.Map {
        "data": null,
        "uri": "/api/events/",
        "context": "foo",
        "user_id": 1,
        "created_datetime": "2019-11-15 19:00:00.000000",
        "object_type": "Ticket",
        "type": "ticket-reopened",
        "id": 3,
        "object_id": 1,
      },
      Immutable.Map {
        "data": null,
        "uri": "/api/events/",
        "context": "foo",
        "user_id": 1,
        "created_datetime": "2019-11-15 19:00:00.000000",
        "object_type": "Ticket",
        "type": "ticket-reopened",
        "id": 4,
        "object_id": 1,
      },
      Immutable.Map {
        "data": null,
        "uri": "/api/events/",
        "context": "bar",
        "user_id": 1,
        "created_datetime": "2019-11-15 19:00:00.000000",
        "object_type": "SatisfactionSurvey",
        "type": "satisfaction-survey-responded",
        "id": 7,
        "object_id": 1,
      },
      Immutable.Map {
        "data": null,
        "uri": "/api/events/",
        "context": "bar",
        "user_id": 1,
        "created_datetime": "2019-11-15 19:00:00.000000",
        "object_type": "SatisfactionSurvey",
        "type": "satisfaction-survey-responded",
        "id": 8,
        "object_id": 1,
      },
    ],
    "type": "ADD_TICKET_AUDIT_LOG_EVENTS",
  },
]
`;

exports[`ticket actions displayAuditLogEvents() should fetch un-scored satisfaction survey of ticket 1`] = `
[
  {
    "type": "DISPLAY_TICKET_AUDIT_LOG_EVENTS",
  },
  {
    "payload": Immutable.List [
      Immutable.Map {
        "data": null,
        "uri": "/api/events/",
        "context": "bar",
        "user_id": 1,
        "created_datetime": "2019-11-15 19:00:00.000000",
        "object_type": "SatisfactionSurvey",
        "type": "satisfaction-survey-responded",
        "id": 1,
        "object_id": 1,
      },
      Immutable.Map {
        "data": null,
        "uri": "/api/events/",
        "context": "bar",
        "user_id": 1,
        "created_datetime": "2019-11-15 19:00:00.000000",
        "object_type": "SatisfactionSurvey",
        "type": "satisfaction-survey-responded",
        "id": 2,
        "object_id": 1,
      },
    ],
    "type": "ADD_TICKET_AUDIT_LOG_EVENTS",
  },
]
`;

exports[`ticket actions displayAuditLogEvents() should skip satisfaction survey events if there is no survey 1`] = `
[
  {
    "type": "DISPLAY_TICKET_AUDIT_LOG_EVENTS",
  },
  {
    "type": "HIDE_TICKET_AUDIT_LOG_EVENTS",
  },
]
`;

exports[`ticket actions fetchTicket() existing instagram ticket 1`] = `
[
  {
    "type": "FETCH_TICKET_START",
  },
  {
    "response": {
      "events": [],
      "id": 1,
      "messages": [
        {
          "source": {
            "type": "instagram-comment",
          },
        },
      ],
    },
    "ticketId": 1,
    "type": "FETCH_TICKET_SUCCESS",
  },
  {
    "resp": {
      "events": [],
      "id": 1,
      "messages": [
        {
          "source": {
            "type": "instagram-comment",
          },
        },
      ],
    },
    "type": "NEW_MESSAGE_FETCH_TICKET_SUCCESS",
  },
  {
    "type": "FETCH_TICKET_REPLY_MACRO",
  },
  {
    "appliedMacro": null,
    "args": Immutable.Map {},
    "currentUser": Immutable.Map {
      "id": 1,
    },
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "trashed_datetime": null,
      "channel": "email",
      "is_unread": false,
      "priority": "normal",
      "custom_fields": Immutable.Map {},
      "reply_options": Immutable.Map {
        "email": Immutable.Map {
          "answerable": true,
        },
        "internal-note": Immutable.Map {
          "answerable": true,
        },
      },
      "spam": false,
      "subject": "",
      "messages": Immutable.List [],
      "assignee_team": null,
      "via": "helpdesk",
      "state": Immutable.Map {
        "dirty": false,
        "latestEventDatetime": null,
        "appliedMacro": null,
        "hasAttemptedToCloseTicket": false,
      },
      "status": "open",
      "tags": Immutable.List [],
      "events": Immutable.List [],
      "assignee_user": null,
      "id": 1,
      "_internal": Immutable.Map {
        "shouldDisplayAuditLogEvents": false,
        "shouldDisplayAllFollowUps": false,
        "loading": Immutable.Map {
          "fetchTicket": false,
          "deleteMessage": false,
          "setSpam": false,
          "setTrash": false,
        },
        "pendingMessages": Immutable.List [],
        "isShopperTyping": false,
        "isShopperTypingTimeoutId": undefined,
        "isPartialUpdating": false,
      },
      "customer": null,
    },
    "ticketId": 1,
    "topRankMacroState": null,
    "type": "setResponseText",
  },
  {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  {
    "messages": Immutable.List [],
    "sourceType": "instagram-comment",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  {
    "extra": {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  {
    "payload": undefined,
    "type": "SET_NEW_MESSAGE_ACTIONS",
  },
  {
    "receivers": {
      "to": [],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {},
    "type": "NEW_MESSAGE_SET_SENDER",
  },
  {
    "receivers": {
      "to": [],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {},
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`ticket actions fetchTicket() existing ticket 1`] = `
[
  {
    "type": "FETCH_TICKET_START",
  },
  {
    "response": {
      "events": [],
      "id": 1,
      "messages": [],
    },
    "ticketId": 1,
    "type": "FETCH_TICKET_SUCCESS",
  },
  {
    "resp": {
      "events": [],
      "id": 1,
      "messages": [],
    },
    "type": "NEW_MESSAGE_FETCH_TICKET_SUCCESS",
  },
  {
    "type": "FETCH_TICKET_REPLY_MACRO",
  },
  {
    "appliedMacro": null,
    "args": Immutable.Map {},
    "currentUser": Immutable.Map {
      "id": 1,
    },
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "trashed_datetime": null,
      "channel": "email",
      "is_unread": false,
      "priority": "normal",
      "custom_fields": Immutable.Map {},
      "reply_options": Immutable.Map {
        "email": Immutable.Map {
          "answerable": true,
        },
        "internal-note": Immutable.Map {
          "answerable": true,
        },
      },
      "spam": false,
      "subject": "",
      "messages": Immutable.List [],
      "assignee_team": null,
      "via": "helpdesk",
      "state": Immutable.Map {
        "dirty": false,
        "latestEventDatetime": null,
        "appliedMacro": null,
        "hasAttemptedToCloseTicket": false,
      },
      "status": "open",
      "tags": Immutable.List [],
      "events": Immutable.List [],
      "assignee_user": null,
      "id": 1,
      "_internal": Immutable.Map {
        "shouldDisplayAuditLogEvents": false,
        "shouldDisplayAllFollowUps": false,
        "loading": Immutable.Map {
          "fetchTicket": false,
          "deleteMessage": false,
          "setSpam": false,
          "setTrash": false,
        },
        "pendingMessages": Immutable.List [],
        "isShopperTyping": false,
        "isShopperTypingTimeoutId": undefined,
        "isPartialUpdating": false,
      },
      "customer": null,
    },
    "ticketId": 1,
    "topRankMacroState": null,
    "type": "setResponseText",
  },
  {
    "receivers": {
      "to": [],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {},
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`ticket actions fetchTicket() new ticket 1`] = `
[
  {
    "type": "FETCH_TICKET_REPLY_MACRO",
  },
  {
    "appliedMacro": null,
    "args": Immutable.Map {},
    "currentUser": undefined,
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "trashed_datetime": null,
      "channel": "email",
      "is_unread": false,
      "priority": "normal",
      "custom_fields": Immutable.Map {},
      "reply_options": Immutable.Map {
        "email": Immutable.Map {
          "answerable": true,
        },
        "internal-note": Immutable.Map {
          "answerable": true,
        },
      },
      "spam": false,
      "subject": "",
      "messages": Immutable.List [],
      "assignee_team": null,
      "via": "helpdesk",
      "state": Immutable.Map {
        "dirty": false,
        "latestEventDatetime": null,
        "appliedMacro": null,
        "hasAttemptedToCloseTicket": false,
      },
      "status": "open",
      "tags": Immutable.List [],
      "events": Immutable.List [],
      "assignee_user": null,
      "_internal": Immutable.Map {
        "shouldDisplayAuditLogEvents": false,
        "shouldDisplayAllFollowUps": false,
        "loading": Immutable.Map {
          "fetchTicket": false,
          "deleteMessage": false,
          "setSpam": false,
          "setTrash": false,
        },
        "pendingMessages": Immutable.List [],
        "isShopperTyping": false,
        "isShopperTypingTimeoutId": undefined,
        "isPartialUpdating": false,
      },
      "customer": null,
    },
    "ticketId": undefined,
    "topRankMacroState": null,
    "type": "setResponseText",
  },
]
`;

exports[`ticket actions fetchTicket() should send ticket-viewed event when ticket is unread 1`] = `
[
  {
    "type": "FETCH_TICKET_START",
  },
  {
    "response": {
      "events": [],
      "id": 1,
      "is_unread": true,
      "messages": [],
    },
    "ticketId": 1,
    "type": "FETCH_TICKET_SUCCESS",
  },
  {
    "resp": {
      "events": [],
      "id": 1,
      "is_unread": true,
      "messages": [],
    },
    "type": "NEW_MESSAGE_FETCH_TICKET_SUCCESS",
  },
  {
    "type": "FETCH_TICKET_REPLY_MACRO",
  },
  {
    "appliedMacro": null,
    "args": Immutable.Map {},
    "currentUser": Immutable.Map {
      "id": 1,
    },
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "trashed_datetime": null,
      "channel": "email",
      "is_unread": false,
      "priority": "normal",
      "custom_fields": Immutable.Map {},
      "reply_options": Immutable.Map {
        "email": Immutable.Map {
          "answerable": true,
        },
        "internal-note": Immutable.Map {
          "answerable": true,
        },
      },
      "spam": false,
      "subject": "",
      "messages": Immutable.List [],
      "assignee_team": null,
      "via": "helpdesk",
      "state": Immutable.Map {
        "dirty": false,
        "latestEventDatetime": null,
        "appliedMacro": null,
        "hasAttemptedToCloseTicket": false,
      },
      "status": "open",
      "tags": Immutable.List [],
      "events": Immutable.List [],
      "assignee_user": null,
      "id": 1,
      "_internal": Immutable.Map {
        "shouldDisplayAuditLogEvents": false,
        "shouldDisplayAllFollowUps": false,
        "loading": Immutable.Map {
          "fetchTicket": false,
          "deleteMessage": false,
          "setSpam": false,
          "setTrash": false,
        },
        "pendingMessages": Immutable.List [],
        "isShopperTyping": false,
        "isShopperTypingTimeoutId": undefined,
        "isPartialUpdating": false,
      },
      "customer": null,
    },
    "ticketId": 1,
    "topRankMacroState": null,
    "type": "setResponseText",
  },
  {
    "ticketId": 1,
    "type": "MARK_CHAT_AS_READ",
  },
  {
    "receivers": {
      "to": [],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {},
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`ticket actions findAndSetCustomer() should set the customer because there is a customer matching this id 1`] = `
[
  {
    "args": Immutable.Map {
      "customer": Immutable.Map {
        "data": Immutable.Map {
          "id": 1,
          "name": "foo",
          "email": "foo@gorgias.io",
        },
      },
    },
    "type": "setCustomer",
  },
]
`;

exports[`ticket actions goToNextTicket() should fetch next ticket and go to the active view because there is no ticket 1`] = `
[
  {
    "type": "FETCH_TICKET_START",
  },
]
`;

exports[`ticket actions goToNextTicket() should fetch next ticket and go to the search because there is no ticket 1`] = `
[
  {
    "type": "FETCH_TICKET_START",
  },
]
`;

exports[`ticket actions goToNextTicket() should fetch next ticket and go to this ticket 1`] = `
[
  {
    "type": "FETCH_TICKET_START",
  },
  {
    "response": {
      "customerId": 1,
      "events": [],
      "id": 2,
      "messages": [],
    },
    "ticketId": 2,
    "type": "FETCH_TICKET_SUCCESS",
  },
  {
    "resp": {
      "customerId": 1,
      "events": [],
      "id": 2,
      "messages": [],
    },
    "type": "NEW_MESSAGE_FETCH_TICKET_SUCCESS",
  },
  {
    "type": "FETCH_TICKET_REPLY_MACRO",
  },
  {
    "appliedMacro": null,
    "args": Immutable.Map {},
    "currentUser": undefined,
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "trashed_datetime": null,
      "channel": "email",
      "is_unread": false,
      "priority": "normal",
      "custom_fields": Immutable.Map {},
      "reply_options": Immutable.Map {
        "email": Immutable.Map {
          "answerable": true,
        },
        "internal-note": Immutable.Map {
          "answerable": true,
        },
      },
      "spam": false,
      "subject": "",
      "messages": Immutable.List [],
      "assignee_team": null,
      "via": "helpdesk",
      "state": Immutable.Map {
        "dirty": false,
        "latestEventDatetime": null,
        "appliedMacro": null,
        "hasAttemptedToCloseTicket": false,
      },
      "status": "open",
      "tags": Immutable.List [],
      "events": Immutable.List [],
      "assignee_user": null,
      "_internal": Immutable.Map {
        "shouldDisplayAuditLogEvents": false,
        "shouldDisplayAllFollowUps": false,
        "loading": Immutable.Map {
          "fetchTicket": false,
          "deleteMessage": false,
          "setSpam": false,
          "setTrash": false,
        },
        "pendingMessages": Immutable.List [],
        "isShopperTyping": false,
        "isShopperTypingTimeoutId": undefined,
        "isPartialUpdating": false,
      },
      "customer": null,
    },
    "ticketId": undefined,
    "topRankMacroState": null,
    "type": "setResponseText",
  },
  {
    "receivers": {
      "to": [],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {},
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`ticket actions goToNextTicket() should fetch next ticket and go to this ticket, and prepare new message correctly as the ticket is an instagram ticket 1`] = `
[
  {
    "type": "FETCH_TICKET_START",
  },
  {
    "response": {
      "customerId": 1,
      "events": [],
      "id": 2,
      "messages": [
        {
          "source": {
            "type": "instagram-comment",
          },
        },
      ],
    },
    "ticketId": 2,
    "type": "FETCH_TICKET_SUCCESS",
  },
  {
    "resp": {
      "customerId": 1,
      "events": [],
      "id": 2,
      "messages": [
        {
          "source": {
            "type": "instagram-comment",
          },
        },
      ],
    },
    "type": "NEW_MESSAGE_FETCH_TICKET_SUCCESS",
  },
  {
    "type": "FETCH_TICKET_REPLY_MACRO",
  },
  {
    "appliedMacro": null,
    "args": Immutable.Map {},
    "currentUser": undefined,
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "trashed_datetime": null,
      "channel": "email",
      "is_unread": false,
      "priority": "normal",
      "custom_fields": Immutable.Map {},
      "reply_options": Immutable.Map {
        "email": Immutable.Map {
          "answerable": true,
        },
        "internal-note": Immutable.Map {
          "answerable": true,
        },
      },
      "spam": false,
      "subject": "",
      "messages": Immutable.List [],
      "assignee_team": null,
      "via": "helpdesk",
      "state": Immutable.Map {
        "dirty": false,
        "latestEventDatetime": null,
        "appliedMacro": null,
        "hasAttemptedToCloseTicket": false,
      },
      "status": "open",
      "tags": Immutable.List [],
      "events": Immutable.List [],
      "assignee_user": null,
      "_internal": Immutable.Map {
        "shouldDisplayAuditLogEvents": false,
        "shouldDisplayAllFollowUps": false,
        "loading": Immutable.Map {
          "fetchTicket": false,
          "deleteMessage": false,
          "setSpam": false,
          "setTrash": false,
        },
        "pendingMessages": Immutable.List [],
        "isShopperTyping": false,
        "isShopperTypingTimeoutId": undefined,
        "isPartialUpdating": false,
      },
      "customer": null,
    },
    "ticketId": undefined,
    "topRankMacroState": null,
    "type": "setResponseText",
  },
  {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  {
    "messages": Immutable.List [],
    "sourceType": "instagram-comment",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  {
    "extra": {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  {
    "payload": undefined,
    "type": "SET_NEW_MESSAGE_ACTIONS",
  },
  {
    "receivers": {
      "to": [],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {},
    "type": "NEW_MESSAGE_SET_SENDER",
  },
  {
    "receivers": {
      "to": [],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {},
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`ticket actions goToNextTicket() should fetch next ticket and wait for promise to be resolved to go to this ticket 1`] = `
[
  {
    "response": {
      "events": [],
      "id": 2,
      "messages": [],
    },
    "ticketId": 2,
    "type": "FETCH_TICKET_SUCCESS",
  },
  {
    "resp": {
      "events": [],
      "id": 2,
      "messages": [],
    },
    "type": "NEW_MESSAGE_FETCH_TICKET_SUCCESS",
  },
  {
    "type": "FETCH_TICKET_REPLY_MACRO",
  },
  {
    "appliedMacro": null,
    "args": Immutable.Map {},
    "currentUser": undefined,
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "trashed_datetime": null,
      "channel": "email",
      "is_unread": false,
      "priority": "normal",
      "custom_fields": Immutable.Map {},
      "reply_options": Immutable.Map {
        "email": Immutable.Map {
          "answerable": true,
        },
        "internal-note": Immutable.Map {
          "answerable": true,
        },
      },
      "spam": false,
      "subject": "",
      "messages": Immutable.List [],
      "assignee_team": null,
      "via": "helpdesk",
      "state": Immutable.Map {
        "dirty": false,
        "latestEventDatetime": null,
        "appliedMacro": null,
        "hasAttemptedToCloseTicket": false,
      },
      "status": "open",
      "tags": Immutable.List [],
      "events": Immutable.List [],
      "assignee_user": null,
      "_internal": Immutable.Map {
        "shouldDisplayAuditLogEvents": false,
        "shouldDisplayAllFollowUps": false,
        "loading": Immutable.Map {
          "fetchTicket": false,
          "deleteMessage": false,
          "setSpam": false,
          "setTrash": false,
        },
        "pendingMessages": Immutable.List [],
        "isShopperTyping": false,
        "isShopperTypingTimeoutId": undefined,
        "isPartialUpdating": false,
      },
      "customer": null,
    },
    "ticketId": undefined,
    "topRankMacroState": null,
    "type": "setResponseText",
  },
  {
    "receivers": {
      "to": [],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {},
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`ticket actions goToNextTicket() should go to first view because active view is a customer view 1`] = `
[
  {
    "type": "FETCH_TICKET_START",
  },
]
`;

exports[`ticket actions goToNextTicket() should go to first view because there is no active view 1`] = `
[
  {
    "type": "FETCH_TICKET_START",
  },
]
`;

exports[`ticket actions goToPrevTicket() should fetch previous ticket and go to the active view because there is no ticket 1`] = `
[
  {
    "type": "FETCH_TICKET_START",
  },
]
`;

exports[`ticket actions goToPrevTicket() should fetch previous ticket and go to the search because there is no ticket 1`] = `
[
  {
    "type": "FETCH_TICKET_START",
  },
]
`;

exports[`ticket actions goToPrevTicket() should fetch previous ticket and go to this ticket 1`] = `
[
  {
    "type": "FETCH_TICKET_START",
  },
  {
    "response": {
      "customerId": 1,
      "events": [],
      "id": 1,
      "messages": [],
    },
    "ticketId": 1,
    "type": "FETCH_TICKET_SUCCESS",
  },
  {
    "resp": {
      "customerId": 1,
      "events": [],
      "id": 1,
      "messages": [],
    },
    "type": "NEW_MESSAGE_FETCH_TICKET_SUCCESS",
  },
  {
    "type": "FETCH_TICKET_REPLY_MACRO",
  },
  {
    "appliedMacro": null,
    "args": Immutable.Map {},
    "currentUser": undefined,
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "trashed_datetime": null,
      "channel": "email",
      "is_unread": false,
      "priority": "normal",
      "custom_fields": Immutable.Map {},
      "reply_options": Immutable.Map {
        "email": Immutable.Map {
          "answerable": true,
        },
        "internal-note": Immutable.Map {
          "answerable": true,
        },
      },
      "spam": false,
      "subject": "",
      "messages": Immutable.List [],
      "assignee_team": null,
      "via": "helpdesk",
      "state": Immutable.Map {
        "dirty": false,
        "latestEventDatetime": null,
        "appliedMacro": null,
        "hasAttemptedToCloseTicket": false,
      },
      "status": "open",
      "tags": Immutable.List [],
      "events": Immutable.List [],
      "assignee_user": null,
      "_internal": Immutable.Map {
        "shouldDisplayAuditLogEvents": false,
        "shouldDisplayAllFollowUps": false,
        "loading": Immutable.Map {
          "fetchTicket": false,
          "deleteMessage": false,
          "setSpam": false,
          "setTrash": false,
        },
        "pendingMessages": Immutable.List [],
        "isShopperTyping": false,
        "isShopperTypingTimeoutId": undefined,
        "isPartialUpdating": false,
      },
      "customer": null,
    },
    "ticketId": undefined,
    "topRankMacroState": null,
    "type": "setResponseText",
  },
  {
    "receivers": {
      "to": [],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {},
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`ticket actions goToPrevTicket() should fetch previous ticket and go to this ticket, and prepare new message correctly as the ticket is an instagram ticket 1`] = `
[
  {
    "type": "FETCH_TICKET_START",
  },
  {
    "response": {
      "customerId": 1,
      "events": [],
      "id": 1,
      "messages": [
        {
          "source": {
            "type": "instagram-comment",
          },
        },
      ],
    },
    "ticketId": 1,
    "type": "FETCH_TICKET_SUCCESS",
  },
  {
    "resp": {
      "customerId": 1,
      "events": [],
      "id": 1,
      "messages": [
        {
          "source": {
            "type": "instagram-comment",
          },
        },
      ],
    },
    "type": "NEW_MESSAGE_FETCH_TICKET_SUCCESS",
  },
  {
    "type": "FETCH_TICKET_REPLY_MACRO",
  },
  {
    "appliedMacro": null,
    "args": Immutable.Map {},
    "currentUser": undefined,
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "trashed_datetime": null,
      "channel": "email",
      "is_unread": false,
      "priority": "normal",
      "custom_fields": Immutable.Map {},
      "reply_options": Immutable.Map {
        "email": Immutable.Map {
          "answerable": true,
        },
        "internal-note": Immutable.Map {
          "answerable": true,
        },
      },
      "spam": false,
      "subject": "",
      "messages": Immutable.List [],
      "assignee_team": null,
      "via": "helpdesk",
      "state": Immutable.Map {
        "dirty": false,
        "latestEventDatetime": null,
        "appliedMacro": null,
        "hasAttemptedToCloseTicket": false,
      },
      "status": "open",
      "tags": Immutable.List [],
      "events": Immutable.List [],
      "assignee_user": null,
      "_internal": Immutable.Map {
        "shouldDisplayAuditLogEvents": false,
        "shouldDisplayAllFollowUps": false,
        "loading": Immutable.Map {
          "fetchTicket": false,
          "deleteMessage": false,
          "setSpam": false,
          "setTrash": false,
        },
        "pendingMessages": Immutable.List [],
        "isShopperTyping": false,
        "isShopperTypingTimeoutId": undefined,
        "isPartialUpdating": false,
      },
      "customer": null,
    },
    "ticketId": undefined,
    "topRankMacroState": null,
    "type": "setResponseText",
  },
  {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  {
    "messages": Immutable.List [],
    "sourceType": "instagram-comment",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  {
    "extra": {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  {
    "payload": undefined,
    "type": "SET_NEW_MESSAGE_ACTIONS",
  },
  {
    "receivers": {
      "to": [],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {},
    "type": "NEW_MESSAGE_SET_SENDER",
  },
  {
    "receivers": {
      "to": [],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {},
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`ticket actions goToPrevTicket() should fetch previous ticket and wait for promise to be resolved to go to this ticket 1`] = `
[
  {
    "response": {
      "events": [],
      "id": 1,
      "messages": [],
    },
    "ticketId": 1,
    "type": "FETCH_TICKET_SUCCESS",
  },
  {
    "resp": {
      "events": [],
      "id": 1,
      "messages": [],
    },
    "type": "NEW_MESSAGE_FETCH_TICKET_SUCCESS",
  },
  {
    "type": "FETCH_TICKET_REPLY_MACRO",
  },
  {
    "appliedMacro": null,
    "args": Immutable.Map {},
    "currentUser": undefined,
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "trashed_datetime": null,
      "channel": "email",
      "is_unread": false,
      "priority": "normal",
      "custom_fields": Immutable.Map {},
      "reply_options": Immutable.Map {
        "email": Immutable.Map {
          "answerable": true,
        },
        "internal-note": Immutable.Map {
          "answerable": true,
        },
      },
      "spam": false,
      "subject": "",
      "messages": Immutable.List [],
      "assignee_team": null,
      "via": "helpdesk",
      "state": Immutable.Map {
        "dirty": false,
        "latestEventDatetime": null,
        "appliedMacro": null,
        "hasAttemptedToCloseTicket": false,
      },
      "status": "open",
      "tags": Immutable.List [],
      "events": Immutable.List [],
      "assignee_user": null,
      "_internal": Immutable.Map {
        "shouldDisplayAuditLogEvents": false,
        "shouldDisplayAllFollowUps": false,
        "loading": Immutable.Map {
          "fetchTicket": false,
          "deleteMessage": false,
          "setSpam": false,
          "setTrash": false,
        },
        "pendingMessages": Immutable.List [],
        "isShopperTyping": false,
        "isShopperTypingTimeoutId": undefined,
        "isPartialUpdating": false,
      },
      "customer": null,
    },
    "ticketId": undefined,
    "topRankMacroState": null,
    "type": "setResponseText",
  },
  {
    "receivers": {
      "to": [],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {},
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`ticket actions goToPrevTicket() should go to first view because there is no active view 1`] = `
[
  {
    "type": "FETCH_TICKET_START",
  },
]
`;

exports[`ticket actions handleMessageActionError() should fetch the ticket because the user is currently on it 1`] = `
[
  {
    "response": {
      "events": [],
      "id": 1,
      "messages": [],
    },
    "ticketId": 1,
    "type": "FETCH_TICKET_SUCCESS",
  },
  {
    "resp": {
      "events": [],
      "id": 1,
      "messages": [],
    },
    "type": "NEW_MESSAGE_FETCH_TICKET_SUCCESS",
  },
  {
    "type": "FETCH_TICKET_REPLY_MACRO",
  },
  {
    "appliedMacro": null,
    "args": Immutable.Map {},
    "currentUser": undefined,
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "trashed_datetime": null,
      "channel": "email",
      "is_unread": false,
      "priority": "normal",
      "custom_fields": Immutable.Map {},
      "reply_options": Immutable.Map {
        "email": Immutable.Map {
          "answerable": true,
        },
        "internal-note": Immutable.Map {
          "answerable": true,
        },
      },
      "spam": false,
      "subject": "",
      "messages": Immutable.List [],
      "assignee_team": null,
      "via": "helpdesk",
      "state": Immutable.Map {
        "dirty": false,
        "latestEventDatetime": null,
        "appliedMacro": null,
        "hasAttemptedToCloseTicket": false,
      },
      "status": "open",
      "tags": Immutable.List [],
      "events": Immutable.List [],
      "assignee_user": null,
      "_internal": Immutable.Map {
        "shouldDisplayAuditLogEvents": false,
        "shouldDisplayAllFollowUps": false,
        "loading": Immutable.Map {
          "fetchTicket": false,
          "deleteMessage": false,
          "setSpam": false,
          "setTrash": false,
        },
        "pendingMessages": Immutable.List [],
        "isShopperTyping": false,
        "isShopperTypingTimeoutId": undefined,
        "isPartialUpdating": false,
      },
      "customer": null,
    },
    "ticketId": undefined,
    "topRankMacroState": null,
    "type": "setResponseText",
  },
  {
    "receivers": {
      "to": [],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {},
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`ticket actions handleMessageActionError() should not fetch the ticket because the user is not currently on it 1`] = `[]`;

exports[`ticket actions handleMessageError() should fetch the ticket because the user is currently on it and reopen the ticket 1`] = `
[
  {
    "args": {
      "status": "open",
    },
    "type": "TICKET_PARTIAL_UPDATE_START",
  },
  {
    "response": {
      "events": [],
      "id": 1,
      "messages": [],
    },
    "ticketId": 1,
    "type": "FETCH_TICKET_SUCCESS",
  },
  {
    "resp": {
      "events": [],
      "id": 1,
      "messages": [],
    },
    "type": "NEW_MESSAGE_FETCH_TICKET_SUCCESS",
  },
  {
    "type": "FETCH_TICKET_REPLY_MACRO",
  },
  {
    "appliedMacro": null,
    "args": Immutable.Map {},
    "currentUser": undefined,
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "trashed_datetime": null,
      "channel": "email",
      "is_unread": false,
      "priority": "normal",
      "custom_fields": Immutable.Map {},
      "reply_options": Immutable.Map {
        "email": Immutable.Map {
          "answerable": true,
        },
        "internal-note": Immutable.Map {
          "answerable": true,
        },
      },
      "spam": false,
      "subject": "",
      "messages": Immutable.List [],
      "assignee_team": null,
      "via": "helpdesk",
      "state": Immutable.Map {
        "dirty": false,
        "latestEventDatetime": null,
        "appliedMacro": null,
        "hasAttemptedToCloseTicket": false,
      },
      "status": "open",
      "tags": Immutable.List [],
      "events": Immutable.List [],
      "assignee_user": null,
      "_internal": Immutable.Map {
        "shouldDisplayAuditLogEvents": false,
        "shouldDisplayAllFollowUps": false,
        "loading": Immutable.Map {
          "fetchTicket": false,
          "deleteMessage": false,
          "setSpam": false,
          "setTrash": false,
        },
        "pendingMessages": Immutable.List [],
        "isShopperTyping": false,
        "isShopperTypingTimeoutId": undefined,
        "isPartialUpdating": false,
      },
      "customer": null,
    },
    "ticketId": undefined,
    "topRankMacroState": null,
    "type": "setResponseText",
  },
  {
    "receivers": {
      "to": [],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {},
    "type": "NEW_MESSAGE_SET_SENDER",
  },
  {
    "resp": {
      "events": [],
      "id": 1,
      "messages": [],
    },
    "type": "TICKET_PARTIAL_UPDATE_SUCCESS",
  },
]
`;

exports[`ticket actions handleMessageError() should not fetch the ticket because the user is not currently on it and reopen the ticket 1`] = `
[
  {
    "args": {
      "status": "open",
    },
    "type": "TICKET_PARTIAL_UPDATE_START",
  },
  {
    "resp": {
      "id": 2,
      "messages": [],
    },
    "type": "TICKET_PARTIAL_UPDATE_SUCCESS",
  },
]
`;

exports[`ticket actions hideAuditLogEvents() should dispatch REMOVE_TICKET_AUDIT_LOG_EVENTS action 1`] = `
[
  {
    "type": "HIDE_TICKET_AUDIT_LOG_EVENTS",
  },
  {
    "type": "REMOVE_TICKET_AUDIT_LOG_EVENTS",
  },
]
`;

exports[`ticket actions mergeCustomer() 1`] = `
[
  {
    "customer": {
      "id": 1,
    },
    "type": "MERGE_CUSTOMER",
  },
]
`;

exports[`ticket actions mergeCustomerExternalData() 1`] = `
[
  {
    "customerId": 1,
    "externalData": {
      "my-awesome-app-id-1": {
        "__app_name__": "foo",
        "badge": "Best customer",
      },
    },
    "type": "MERGE_CUSTOMER_EXTERNAL_DATA",
  },
]
`;

exports[`ticket actions mergeTicket() fails because not current ticket 1`] = `[]`;

exports[`ticket actions mergeTicket() success 1`] = `
[
  {
    "messagesDifference": 1,
    "ticket": Immutable.Map {
      "id": 1,
      "subject": "title",
      "messages": Immutable.List [
        Immutable.Map {
          "id": 1,
          "body_text": "hello",
          "body_html": "<div>hello</div>",
          "channel": "email",
        },
      ],
      "customer": Immutable.Map {
        "id": 1,
        "data": Immutable.Map {
          "hello": "world!",
        },
      },
    },
    "type": "MERGE_TICKET",
  },
  {
    "ticket": Immutable.Map {
      "id": 1,
      "subject": "title",
      "messages": Immutable.List [
        Immutable.Map {
          "id": 1,
          "body_text": "hello",
          "body_html": "<div>hello</div>",
          "channel": "email",
        },
      ],
      "customer": Immutable.Map {
        "id": 1,
        "data": Immutable.Map {
          "hello": "world!",
        },
      },
    },
    "type": "NEW_MESSAGE_RESET_FROM_TICKET",
  },
  {
    "receivers": {
      "to": [],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  {
    "sender": Immutable.Map {},
    "type": "NEW_MESSAGE_SET_SENDER",
  },
  {
    "payload": {
      "isShopperTyping": false,
    },
    "type": "SET_TYPING_ACTIVITY_SHOPPER",
  },
]
`;

exports[`ticket actions messageDeleted() should dispatch TICKET_MESSAGE_DELETED action 1`] = `
[
  {
    "payload": "123",
    "type": "TICKET_MESSAGE_DELETED",
  },
]
`;

exports[`ticket actions removeTag() 1`] = `
[
  {
    "args": Immutable.Map {
      "tag": "refund",
    },
    "type": "REMOVE_TICKET_TAG",
  },
]
`;

exports[`ticket actions restoreTicketDraft() should dispatch RESTORE_TICKET_DRAFT action 1`] = `
{
  "payload": {
    "assignee_team": null,
    "assignee_user": null,
    "customer": null,
    "subject": "",
    "tags": [],
  },
  "type": "RESTORE_TICKET_DRAFT",
}
`;

exports[`ticket actions setAgent() 1`] = `
[
  {
    "args": Immutable.Map {
      "assignee_user": Immutable.Map {
        "id": 1,
        "name": "Acme Support",
        "email": "support@acme.gorgias.io",
        "meta": Immutable.Map {},
      },
    },
    "type": "setAssignee",
  },
]
`;

exports[`ticket actions setCustomer() 1`] = `
[
  {
    "args": Immutable.Map {
      "customer": Immutable.Map {
        "id": 1,
        "custom": true,
      },
    },
    "type": "setCustomer",
  },
]
`;

exports[`ticket actions setHasAttemptedToCloseTicket 1`] = `
[
  {
    "payload": true,
    "type": "SET_HAS_ATTEMPTED_TO_CLOSE_TICKET",
  },
]
`;

exports[`ticket actions setShouldDisplayAllFollowUps 1`] = `
[
  {
    "payload": true,
    "type": "SET_SHOULD_DISPLAY_ALL_FOLLOW_UPS",
  },
]
`;

exports[`ticket actions setShouldDisplayAllFollowUps with false 1`] = `
[
  {
    "payload": false,
    "type": "SET_SHOULD_DISPLAY_ALL_FOLLOW_UPS",
  },
]
`;

exports[`ticket actions setSpam() fails because same status 1`] = `[]`;

exports[`ticket actions setSpam() should undo when clicking on notification button 1`] = `
[
  {
    "spam": true,
    "type": "setSpamStart",
  },
  {
    "args": {
      "spam": true,
    },
    "type": "TICKET_PARTIAL_UPDATE_START",
  },
  {
    "resp": {
      "data": {},
    },
    "type": "TICKET_PARTIAL_UPDATE_SUCCESS",
  },
  {
    "type": "setSpamSuccess",
  },
  {
    "type": "FETCH_TICKET_START",
  },
  {
    "error": [Error: Request failed with status code 404],
    "reason": "Failed to fetch ticket 1",
    "type": "FETCH_TICKET_ERROR",
  },
]
`;

exports[`ticket actions setSpam() success 1`] = `
[
  {
    "spam": true,
    "type": "setSpamStart",
  },
  {
    "args": {
      "spam": true,
    },
    "type": "TICKET_PARTIAL_UPDATE_START",
  },
  {
    "resp": {
      "data": {},
    },
    "type": "TICKET_PARTIAL_UPDATE_SUCCESS",
  },
  {
    "type": "setSpamSuccess",
  },
]
`;

exports[`ticket actions setStatus() 1`] = `
[
  {
    "args": Immutable.Map {
      "status": "open",
    },
    "type": "setStatus",
  },
]
`;

exports[`ticket actions setSubject() 1`] = `
[
  {
    "args": Immutable.Map {
      "subject": "new title",
    },
    "type": "setSubject",
  },
]
`;

exports[`ticket actions setTeam() 1`] = `
[
  {
    "args": Immutable.Map {
      "assignee_team": Immutable.Map {
        "id": 33,
        "name": "Foo",
      },
    },
    "type": "setTeamAssignee",
  },
]
`;

exports[`ticket actions setTrashed() should dispatch actions (trash ticket) 1`] = `
[
  {
    "trashed_datetime": "2017-08-11T00:00:00.000Z",
    "type": "setTrashedStart",
  },
  {
    "args": {
      "trashed_datetime": "2017-08-11T00:00:00.000Z",
    },
    "type": "TICKET_PARTIAL_UPDATE_START",
  },
  {
    "resp": {
      "data": {},
    },
    "type": "TICKET_PARTIAL_UPDATE_SUCCESS",
  },
  {
    "type": "setTrashedSuccess",
  },
]
`;

exports[`ticket actions setTrashed() should dispatch actions (untrash ticket) 1`] = `
[
  {
    "trashed_datetime": null,
    "type": "setTrashedStart",
  },
  {
    "args": {
      "trashed_datetime": null,
    },
    "type": "TICKET_PARTIAL_UPDATE_START",
  },
  {
    "resp": {
      "data": {},
    },
    "type": "TICKET_PARTIAL_UPDATE_SUCCESS",
  },
  {
    "type": "setTrashedSuccess",
  },
]
`;

exports[`ticket actions setTrashed() should undo when clicking on notification button 1`] = `
[
  {
    "trashed_datetime": "2017-08-11T00:00:00.000Z",
    "type": "setTrashedStart",
  },
  {
    "args": {
      "trashed_datetime": "2017-08-11T00:00:00.000Z",
    },
    "type": "TICKET_PARTIAL_UPDATE_START",
  },
  {
    "resp": {
      "data": {},
    },
    "type": "TICKET_PARTIAL_UPDATE_SUCCESS",
  },
  {
    "type": "setTrashedSuccess",
  },
  {
    "type": "FETCH_TICKET_START",
  },
  {
    "error": [Error: Request failed with status code 404],
    "reason": "Failed to fetch ticket 1",
    "type": "FETCH_TICKET_ERROR",
  },
  {
    "trashed_datetime": null,
    "type": "setTrashedStart",
  },
  {
    "args": {
      "trashed_datetime": null,
    },
    "type": "TICKET_PARTIAL_UPDATE_START",
  },
]
`;

exports[`ticket actions setTypingActivityShopper() should dispatch SET_TYPING_ACTIVITY_SHOPPER action 1`] = `
[
  {
    "payload": {
      "isShopperTyping": true,
      "isShopperTypingTimeoutId": 1,
    },
    "type": "SET_TYPING_ACTIVITY_SHOPPER",
  },
]
`;

exports[`ticket actions snoozeTicket() should snooze ticket 1`] = `
[
  {
    "snooze_datetime": "2017-12-21T00:00:00.000Z",
    "status": "closed",
    "type": "snoozeTicket",
  },
]
`;

exports[`ticket actions snoozeTicket() should snooze ticket and call the callback 1`] = `
[
  {
    "snooze_datetime": "2017-12-21T00:00:00.000Z",
    "status": "closed",
    "type": "snoozeTicket",
  },
]
`;

exports[`ticket actions ticketPartialUpdate() fails because new ticket 1`] = `[]`;

exports[`ticket actions ticketPartialUpdate() should update a ticket with the passed id instead of the current one 1`] = `
[
  {
    "args": {
      "subject": "new title",
    },
    "type": "TICKET_PARTIAL_UPDATE_START",
  },
  {
    "resp": {
      "data": {
        "id": 2,
      },
    },
    "type": "TICKET_PARTIAL_UPDATE_SUCCESS",
  },
]
`;

exports[`ticket actions ticketPartialUpdate() success 1`] = `
[
  {
    "args": {
      "subject": "new title",
    },
    "type": "TICKET_PARTIAL_UPDATE_START",
  },
  {
    "resp": {
      "data": {
        "id": 1,
      },
    },
    "type": "TICKET_PARTIAL_UPDATE_SUCCESS",
  },
]
`;

exports[`ticket actions triggerTicketFieldsErrors() should dispatch SET_INVALID_CUSTOM_FIELDS_TO_ERRORED and notify action 1`] = `
[
  {
    "payload": [
      1,
      2,
      3,
    ],
    "type": "SET_INVALID_CUSTOM_FIELDS_TO_ERRORED",
  },
]
`;

exports[`ticket actions updateActionArgsOnApplied() 1`] = `
[
  {
    "actionIndex": 0,
    "ticketId": 1,
    "type": "UPDATE_ACTION_ARGS_ON_APPLIED",
    "value": Immutable.Map {
      "name": "hello",
    },
  },
]
`;

exports[`ticket actions updateCustomFieldError() should dispatch UPDATE_CUSTOM_FIELD_ERROR action 1`] = `
[
  {
    "payload": {
      "hasError": true,
      "id": 1,
    },
    "type": "UPDATE_CUSTOM_FIELD_ERROR",
  },
]
`;

exports[`ticket actions updateCustomFieldState() should dispatch UPDATE_CUSTOM_FIELD_STATE action 1`] = `
[
  {
    "payload": {
      "id": 1,
      "value": "ok",
    },
    "type": "UPDATE_CUSTOM_FIELD_STATE",
  },
]
`;

exports[`ticket actions updateCustomFieldValue() should dispatch UPDATE_CUSTOM_FIELD_VALUE action 1`] = `
[
  {
    "payload": {
      "id": 1,
      "value": "ok",
    },
    "type": "UPDATE_CUSTOM_FIELD_VALUE",
  },
]
`;

exports[`ticket actions updateTicketMessage() retry action should not invalidate queries when retry action fails 1`] = `
[
  {
    "messageId": 10,
    "type": "UPDATE_TICKET_MESSAGE_START",
  },
  {
    "error": [Error: Request failed with status code 400],
    "messageId": 10,
    "reason": "Message was not sent. Please try again in a few moments. If the problem persists, contact us.",
    "type": "UPDATE_TICKET_MESSAGE_ERROR",
  },
]
`;

exports[`ticket actions updateTicketMessage() retry action should retry message and invalidate queries 1`] = `
[
  {
    "messageId": 10,
    "type": "UPDATE_TICKET_MESSAGE_START",
  },
  {
    "messageId": 10,
    "resp": {
      "id": 10,
    },
    "type": "UPDATE_TICKET_MESSAGE_SUCCESS",
  },
]
`;

exports[`ticket actions updateTicketMessage() should handle error when updating message 1`] = `
[
  {
    "messageId": 10,
    "type": "UPDATE_TICKET_MESSAGE_START",
  },
  {
    "error": [Error: Request failed with status code 400],
    "messageId": 10,
    "reason": "Message was not sent. Please try again in a few moments. If the problem persists, contact us.",
    "type": "UPDATE_TICKET_MESSAGE_ERROR",
  },
]
`;

exports[`ticket actions updateTicketMessage() should update message successfully 1`] = `
[
  {
    "messageId": 10,
    "type": "UPDATE_TICKET_MESSAGE_START",
  },
  {
    "messageId": 10,
    "resp": {
      "id": 10,
    },
    "type": "UPDATE_TICKET_MESSAGE_SUCCESS",
  },
]
`;
